<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.nonofce.android.myprescriptions.common.RouteDropDownConverter" />

        <import type="com.nonofce.android.myprescriptions.common.FreqDropDownConverter" />

        <variable
            name="vm"
            type="com.nonofce.android.myprescriptions.ui.medications.MedicationDataViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/medicationData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            tools:context=".ui.medications.MedicationData">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/medication_name"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.medicationName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_strength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/medication_strength"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/medication_amount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={vm.medicationStrength}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/medication_amount"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/medication_strength"
                app:layout_constraintTop_toBottomOf="@+id/medication_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={vm.medicationAmount}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_route"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/medication_route_label"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_strength"
                android:labelFor="@+id/medication_route_selection">

                <AutoCompleteTextView
                    android:id="@+id/medication_route_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:text="@={RouteDropDownConverter.INSTANCE.fromValueToLabel(context, vm.medicationRoute)}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_freq"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/medication_freq_label"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_route"
                android:labelFor="@+id/medication_freq_selection">

                <AutoCompleteTextView
                    android:id="@+id/medication_freq_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:text="@={FreqDropDownConverter.INSTANCE.fromValueToLabel(context, vm.medicationFreq)}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/medication_starting_date"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/medication_date_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_freq">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@={vm.medicationStartDate}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/medication_date_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="8dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:icon="@drawable/ic_date_range_white_24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"

                app:iconSize="24dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/medication_start_date"
                app:layout_constraintTop_toBottomOf="@+id/medication_freq"
                app:shapeAppearanceOverlay="@style/CircleButton" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/medication_starting_time"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@+id/medication_time_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_start_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@={vm.medicationStartTime}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/medication_time_button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="8dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:icon="@drawable/ic_access_time_24dp"
                app:iconGravity="textStart"
                app:iconPadding="0dp"

                app:iconSize="24dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/medication_start_time"
                app:layout_constraintTop_toBottomOf="@+id/medication_start_date"
                app:shapeAppearanceOverlay="@style/CircleButton" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/medication_how_much"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/medication_how_much"
                app:boxBackgroundColor="?attr/colorOnPrimarySurface"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_start_time">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@={vm.medicationHowMuch}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/medication_data_done_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/done_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/medication_how_much" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>